force-app/main/default/objects/Project__c/fields/Master_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Master_Picklist__c</fullName>
    <label>Master Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>