force-app/main/default/objects/Project__c/fields/My_Currency__c.field-meta.xml
<CustomField>
    <fullName>My_Currency__c</fullName>
    <label>My Currency</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>