force-app/main/default/objects/Project__c/fields/My_Date__c.field-meta.xml
<CustomField>
    <fullName>My_Date__c</fullName>
    <defaultValue>Today() + 7</defaultValue>
    <label>My Date</label>
    <type>Date</type>
</CustomField>