force-app/main/default/objects/Project__c/fields/My_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Formula_Field__c</fullName>
    <formula>&quot;Parent account is &quot; &amp;  UPPER(Account__r.Name)</formula>
    <label>My Formula Field</label>
    <type>Text</type>
</CustomField>