force-app/main/default/objects/Project__c/fields/My_MultiSelect_Picklist__c.field-meta.xml
<CustomField>
    <fullName>My_MultiSelect_Picklist__c</fullName>
    <label>My_MultiSelect_Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item 1</fullName>
            </value>
            <value>
                <fullName>Item 2</fullName>
            </value>
            <value>
                <fullName>Item 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>