force-app/main/default/objects/Project__c/fields/My_Picklist__c.field-meta.xml
<CustomField>
    <fullName>My_Picklist__c</fullName>
    <label>My Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Picklist Item 1</fullName>
            </value>
            <value>
                <fullName>My Picklist Item 2</fullName>
            </value>
            <value>
                <fullName>My Picklist Item 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>