force-app/main/default/objects/Project__c/fields/My_Picklist_Based_On_RecordType__c.field-meta.xml
<CustomField>
    <fullName>My_Picklist_Based_On_RecordType__c</fullName>
    <label>My Picklist Based On RecordType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Item 1</fullName>
            </value>
            <value>
                <fullName>My Item 2</fullName>
            </value>
            <value>
                <fullName>Your Item 1</fullName>
            </value>
            <value>
                <fullName>Your Item2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>