force-app/main/default/objects/Project__c/fields/ParentProject__c.field-meta.xml
<CustomField>
    <fullName>ParentProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentProject</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Hierarchy</relationshipLabel>
    <relationshipName>ChildrenProjects</relationshipName>
    <type>Lookup</type>
</CustomField>