force-app/main/default/objects/Project__c/fields/Slave_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Slave_Picklist__c</fullName>
    <label>Slave Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Master_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>