force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&quot;My Status 1&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Status 1</fullName>
            </value>
            <value>
                <fullName>My Status 2</fullName>
            </value>
            <value>
                <fullName>My Status 3</fullName>
            </value>
            <value>
                <fullName>Your Status 1</fullName>
            </value>
            <value>
                <fullName>Your Status 2</fullName>
            </value>
            <value>
                <fullName>Your Status 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>