force-app/main/default/objects/Project__c/recordTypes/My_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>My_Record_Type</fullName>
    <active>true</active>
    <label>My Record Type</label>
</RecordType>