force-app/main/default/objects/Project__c/recordTypes/Your_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Your_Record_Type</fullName>
    <active>true</active>
    <label>Your Record Type</label>
</RecordType>