force-app/main/default/objects/Project__c/listViews/Other_Projects_in_MyRecordType.listView-meta.xml
<ListView>
    <fullName>Other_Projects_in_MyRecordType</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.My_Record_Type</value>
    </filters>
    <label>Other Projects in MyRecordType</label>
</ListView>