force-app/main/default/objects/Project__c/listViews/Project_records_with_topic.listView-meta.xml
<ListView>
    <fullName>Project_records_with_topic</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topics</field>
        <operation>includes</operation>
        <value>myProjectTopic</value>
    </filters>
    <label>Project records with topic</label>
</ListView>